// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostContentBase - Snapshots > matches snapshot with empty content 1`] = `
<div
  class="min-w-0 gap-3"
  data-testid="container"
>
  <div
    data-testid="post-attachments"
  />
</div>
`;

exports[`PostContentBase - Snapshots > matches snapshot with loading state 1`] = `
<div
  class="text-muted-foreground"
>
  Loading content...
</div>
`;

exports[`PostContentBase - Snapshots > matches snapshot with multiline content (preserves newlines) 1`] = `
<div
  class="min-w-0 gap-3"
  data-testid="container"
>
  <div
    class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
    data-testid="container"
  >
    <p>
      Line 1
Line 2
    </p>
    

    <p>
      Line 3
    </p>
  </div>
  <div
    data-testid="post-attachments"
  />
</div>
`;

exports[`PostContentBase - Snapshots > matches snapshot with single-line content 1`] = `
<div
  class="min-w-0 gap-3"
  data-testid="container"
>
  <div
    class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
    data-testid="container"
  >
    <p>
      One liner
    </p>
  </div>
  <div
    data-testid="post-attachments"
  />
</div>
`;

exports[`PostContentBase - Snapshots > matches snapshot with special characters in content 1`] = `
<div
  class="min-w-0 gap-3"
  data-testid="container"
>
  <div
    class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
    data-testid="container"
  >
    <p>
      Content with 
      &lt;tags&gt;
       & "quotes" & 'apostrophes'
    </p>
  </div>
  <div
    data-testid="post-attachments"
  />
</div>
`;

exports[`PostContentBase - Snapshots > matches snapshot with very long content 1`] = `
<div
  class="min-w-0 gap-3"
  data-testid="container"
>
  <div
    class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
    data-testid="container"
  >
    <p>
      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA... 
    </p>
    <button
      aria-label="Show full post content"
      class="mt-4 cursor-pointer text-brand transition-colors hover:text-brand/80"
      data-testid="button"
    >
      Show more
    </button>
  </div>
  <div
    data-testid="post-attachments"
  />
</div>
`;
